update-manager (1:0.59.13) feisty; urgency=low

  * po/POTFILES.in:
    - reomove [type: ] this confused intltool

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon,  2 Apr 2007 11:46:40 +0200

update-manager (1:0.59.12) feisty; urgency=low

  * DistUpgrade/DistUpgradeViewKDE.py:
    - set debian frontend to "kde"
  * DistUpgrade/DistUpgradeCache.py:
    - do not crash when uname -r can't be parsed (LP#97663)
    - remove the nfs upgrade question again, the kernel team
      fixed the regression
  * DistUpgrade/DistUpgradeApport.py:
    - do not crash if no apport gui is available (LP#97498)
  * DistUpgrade/DistUpgradeViewText.py:
    - support details in text-mode (LP#94129)
  * DistUpgrade/DistUpgradeControler.py:
    - fix incorrect auto-installed information from meta-pkgs 
      (LP#86921)
    - rewrite /etc/fstab cdrom entries (LP#86424,#79327)
    - fix upgrade for people with no admin group (LP#93279)
    - when encountering a error, first show the error dialog,
      then run the recover (LP#92366)
  * dist-upgrade.py:
    - support fallback when a frontend view can not be imported
      (LP#89568)
    - log the version of the upgrader as well
  * DistUpgrade/mirrors.cfg:
    - updated with the current mirror RSS feed from LP

 -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 30 Mar 2007 20:53:17 +0200

update-manager (1:0.59.11) feisty; urgency=low

  * DistUpgrade/DistUpgradeViewKDE.py:
    - fix crash in mediaChange (LP#96849)
  * DistUpgrade/DistUpgradeViewText.py:
    - fix crash on broken packages (LP#96444)
  * DistUpgrade/DistUpgradeCache.py:
    - ensure that the latest kernel is always selected (LP#96196)
    - added nfs-common check in feistyQuirks and ask to install
      it if it appears to be missing
  * DistUpgrade/DistUpgradeControler.py:
    - add any additional sanity check at the start of the upgrade
      to check if the base distro is supported

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 27 Mar 2007 22:48:54 +0200
